[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "botyara"
version = "0.1.0"
[tool.poetry.dependencies]
googletrans = "^4.0.0-rc1"
python = "^3.8"
"discord.py" = "^1.7.3"
Flask = "^2.0.1"
google-api-python-client = "^2.14.0"
[tool.poetry.dev-dependencies]
